# LicensePlate

./: README.md
LicensePlateSeg_final/LicensePlateSeg_final/: Binarization.cpp  Morphology.cpp  Preprocess.cpp  Segmentation.cpp  Segmentation.hpp  colorJudge.cpp  main.cpp  rotateCorrect.cpp  rotateCorrect.hpp
PlateDetectByColor/: CMakeCache.txt  CMakeLists.txt  ColorLocate.cpp  ColorLocate.h  Makefile  PlateDetect.h  cmake_install.cmake  main.cpp
